[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "dopamax"
version = "0.2.1"
description = "Reinforcement learning in pure JAX."
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">= 3.10"

dependencies = [
    "brax>=0.12.1",
    "chex>=0.1.88",
    "click>=8.1.8",
    "distrax>=0.1.5",
    "dm-env>=1.6",
    "dm-haiku>=0.0.13",
    "einops>=0.8.1",
    "flashbax>=0.1.2",
    "gymnax>=0.0.8",
    "jax>=0.4.38",
    "mctx>=0.0.5",
    "ml-collections>=1.0.0",
    "optax>=0.2.4",
    "pgx>=2.5.0",
    "rlax>=0.1.6",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
]

authors = [
    { name = "Ryan Strauss", email = "ryanrstrauss@icloud.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
dopamax = "dopamax._scripts.cli:cli"

[project.urls]
Repository = "https://github.com/rystrauss/dopamax.git"

[tool.ruff]
line-length = 120
target-version = ["py310", "py311", "py312"]
